--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -486,77 +486,77 @@ video {
 .right-5 {
   right: 1.25rem;
 }
-.bottom-0 {
-  bottom: 0px;
-}
-.bottom-10 {
-  bottom: 2.5rem;
+.bottom-16 {
+  bottom: 4rem;
 }
 .left-1\/2 {
   left: 50%;
 }
-.bottom-16 {
-  bottom: 4rem;
+.bottom-24 {
+  bottom: 6rem;
+}
+.bottom-40 {
+  bottom: 10rem;
 }
 .top-0 {
   top: 0px;
 }
-.top-10 {
-  top: 2.5rem;
+.right-0 {
+  right: 0px;
 }
-.top-\[50\%\] {
-  top: 50%;
-}
-.top-\[0\] {
-  top: 0;
-}
-.bottom-\[50\%\] {
-  bottom: 50%;
-}
-.bottom-\[0\%\] {
-  bottom: 0%;
-}
-.bottom-\[-50\%\] {
-  bottom: -50%;
+.top-\[10\%\] {
+  top: 10%;
 }
 .left-0 {
   left: 0px;
 }
-.-right-10 {
-  right: -2.5rem;
+.top-10 {
+  top: 2.5rem;
 }
-.-right-1 {
-  right: -0.25rem;
+.top-14 {
+  top: 3.5rem;
 }
-.-right-0 {
-  right: -0px;
+.left-4 {
+  left: 1rem;
 }
-.left-20 {
-  left: 5rem;
+.left-10 {
+  left: 2.5rem;
 }
-.bottom-3 {
-  bottom: 0.75rem;
+.bottom-10 {
+  bottom: 2.5rem;
 }
-.right-0 {
-  right: 0px;
+.bottom-0 {
+  bottom: 0px;
 }
-.z-10 {
-  z-index: 10;
+.top-20 {
+  top: 5rem;
 }
-.-z-10 {
-  z-index: -10;
+.bottom-\[100\%\] {
+  bottom: 100%;
 }
-.z-20 {
-  z-index: 20;
+.bottom-\[80\%\] {
+  bottom: 80%;
+}
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+.bottom-\[0px\] {
+  bottom: 0px;
+}
+.-bottom-\[100px\] {
+  bottom: -100px;
+}
+.-bottom-\[100\%\] {
+  bottom: -100%;
+}
+.m-auto {
+  margin: auto;
 }
 .mt-5 {
   margin-top: 1.25rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
-}
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 .inline-block {
   display: inline-block;
@@ -567,26 +567,50 @@ video {
 .hidden {
   display: none;
 }
-.h-40 {
-  height: 10rem;
-}
-.h-\[90vh\] {
-  height: 90vh;
-}
 .h-\[100vh\] {
   height: 100vh;
 }
-.h-2 {
-  height: 0.5rem;
-}
-.h-1 {
-  height: 0.25rem;
+.h-40 {
+  height: 10rem;
 }
 .h-\[1px\] {
   height: 1px;
 }
-.h-10 {
-  height: 2.5rem;
+.h-\[\.5px\] {
+  height: .5px;
+}
+.h-\[\.2px\] {
+  height: .2px;
+}
+.h-\[0\.2px\] {
+  height: 0.2px;
+}
+.h-\[10\%\] {
+  height: 10%;
+}
+.h-\[20\%\] {
+  height: 20%;
+}
+.h-3 {
+  height: 0.75rem;
+}
+.h-2 {
+  height: 0.5rem;
+}
+.h-\[100px\] {
+  height: 100px;
+}
+.h-full {
+  height: 100%;
+}
+.h-\[200px\] {
+  height: 200px;
+}
+.h-\[150px\] {
+  height: 150px;
+}
+.h-\[\.3px\] {
+  height: .3px;
 }
 .w-\[0\.3px\] {
   width: 0.3px;
@@ -597,20 +621,50 @@ video {
 .w-\[10\%\] {
   width: 10%;
 }
-.w-\[30\%\] {
-  width: 30%;
+.w-\[50\%\] {
+  width: 50%;
+}
+.w-\[40\%\] {
+  width: 40%;
 }
 .w-\[20\%\] {
   width: 20%;
 }
-.w-\[18\%\] {
-  width: 18%;
+.w-\[1px\] {
+  width: 1px;
 }
-.w-\[15\%\] {
-  width: 15%;
+.w-\[2px\] {
+  width: 2px;
 }
-.w-\[100vh\] {
-  width: 100vh;
+.w-\[80\%\] {
+  width: 80%;
+}
+.w-\[70\%\] {
+  width: 70%;
+}
+.w-\[68\%\] {
+  width: 68%;
+}
+.w-\[3px\] {
+  width: 3px;
+}
+.w-\[10px\] {
+  width: 10px;
+}
+.w-full {
+  width: 100%;
+}
+.w-\[100px\] {
+  width: 100px;
+}
+.w-\[75\%\] {
+  width: 75%;
+}
+.w-\[200px\] {
+  width: 200px;
+}
+.w-\[150px\] {
+  width: 150px;
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -625,26 +679,14 @@ video {
 .items-center {
   align-items: center;
 }
-.items-stretch {
-  align-items: stretch;
-}
 .justify-center {
   justify-content: center;
-}
-.gap-2 {
-  gap: 0.5rem;
 }
 .gap-3 {
   gap: 0.75rem;
 }
-.gap-10 {
-  gap: 2.5rem;
-}
-.gap-5 {
-  gap: 1.25rem;
-}
-.gap-8 {
-  gap: 2rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 .self-start {
   align-self: flex-start;
@@ -655,105 +697,80 @@ video {
 .self-center {
   align-self: center;
 }
-.self-stretch {
-  align-self: stretch;
-}
-.bg-\[\#eee6d7\] {
+.bg-\[\#234d3a\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(238 230 215 / var(--tw-bg-opacity));
+  background-color: rgb(35 77 58 / var(--tw-bg-opacity));
 }
 .bg-\[\#c6ac77\] {
   --tw-bg-opacity: 1;
   background-color: rgb(198 172 119 / var(--tw-bg-opacity));
 }
-.bg-\[\#234d3a\] {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(35 77 58 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-\[\#d5c29b\] {
+.bg-\[\#dac9a7\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(213 194 155 / var(--tw-bg-opacity));
+  background-color: rgb(218 201 167 / var(--tw-bg-opacity));
 }
-.bg-\[\#bc9d5f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(188 157 95 / var(--tw-bg-opacity));
+.p-2 {
+  padding: 0.5rem;
 }
-.bg-\[\#d0bb8f\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(208 187 143 / var(--tw-bg-opacity));
-}
-.bg-\[\#e4d8bf\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(228 216 191 / var(--tw-bg-opacity));
-}
-.bg-\[\] {
-  background-color: ;
-}
-.bg-\[c6ac77\] {
-  background-color: c6ac77;
-}
-.p-10 {
-  padding: 2.5rem;
-}
-.p-32 {
-  padding: 8rem;
-}
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-.px-36 {
-  padding-left: 9rem;
-  padding-right: 9rem;
-}
-.px-40 {
-  padding-left: 10rem;
-  padding-right: 10rem;
+.p-16 {
+  padding: 4rem;
 }
 .px-48 {
   padding-left: 12rem;
   padding-right: 12rem;
 }
-.pt-44 {
-  padding-top: 11rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
-.pr-10 {
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-.pl-10 {
-  padding-left: 2.5rem;
-}
-.pl-32 {
-  padding-left: 8rem;
-}
-.pl-20 {
-  padding-left: 5rem;
-}
-.pl-36 {
-  padding-left: 9rem;
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 .pl-40 {
   padding-left: 10rem;
 }
-.pt-48 {
-  padding-top: 12rem;
-}
-.pt-5 {
-  padding-top: 1.25rem;
-}
 .pt-20 {
   padding-top: 5rem;
 }
+.pt-44 {
+  padding-top: 11rem;
+}
+.pt-10 {
+  padding-top: 2.5rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
+}
+.pt-16 {
+  padding-top: 4rem;
+}
+.pl-20 {
+  padding-left: 5rem;
+}
 .text-center {
   text-align: center;
+}
+.text-justify {
+  text-align: justify;
+}
+.text-\[5px\] {
+  font-size: 5px;
+}
+.text-\[48px\] {
+  font-size: 48px;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -769,30 +786,6 @@ video {
 .text-\[60px\] {
   font-size: 60px;
 }
-.text-\[64px\] {
-  font-size: 64px;
-}
-.text-\[48px\] {
-  font-size: 48px;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-.text-\[2px\] {
-  font-size: 2px;
-}
-.text-\[5px\] {
-  font-size: 5px;
-}
 .font-thin {
   font-weight: 100;
 }
@@ -801,6 +794,18 @@ video {
 }
 .leading-\[85px\] {
   line-height: 85px;
+}
+.leading-3 {
+  line-height: .75rem;
+}
+.leading-5 {
+  line-height: 1.25rem;
+}
+.leading-8 {
+  line-height: 2rem;
+}
+.leading-10 {
+  line-height: 2.5rem;
 }
 .tracking-tight {
   letter-spacing: -0.025em;
@@ -812,14 +817,6 @@ video {
 .text-\[\#eee6d7\] {
   --tw-text-opacity: 1;
   color: rgb(238 230 215 / var(--tw-text-opacity));
-}
-.text-\[\#234d3a\] {
-  --tw-text-opacity: 1;
-  color: rgb(35 77 58 / var(--tw-text-opacity));
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
