made few changes to the header part

--- a/Portfolio/src/styles/tailwind.css
+++ b/Portfolio/src/styles/tailwind.css
@@ -6,8 +6,9 @@ body {
   font-family: "Montserrat", sans-serif;
   /* font-family: "Roboto", sans-serif; */
 
-  /* background-color: #234d3a; */
-  /* background-color: #172c2d; */
+  background-color: #234d3a;
+  background-color: #172c2d;
+  background-color: #224244;
   /* color: #dac9a7; */
   color: #c6ac77;
 }
