--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -477,8 +477,29 @@ video {
 .relative {
   position: relative;
 }
+.top-10 {
+  top: 2.5rem;
+}
 .left-5 {
   left: 1.25rem;
+}
+.bottom-0 {
+  bottom: 0px;
+}
+.right-0 {
+  right: 0px;
+}
+.top-2 {
+  top: 0.5rem;
+}
+.-left-8 {
+  left: -2rem;
+}
+.-bottom-\[160px\] {
+  bottom: -160px;
+}
+.-left-\[185px\] {
+  left: -185px;
 }
 .top-\[25\%\] {
   top: 25%;
@@ -486,77 +507,29 @@ video {
 .right-5 {
   right: 1.25rem;
 }
-.bottom-16 {
-  bottom: 4rem;
+.bottom-40 {
+  bottom: 10rem;
 }
 .left-1\/2 {
   left: 50%;
 }
-.bottom-24 {
-  bottom: 6rem;
-}
-.bottom-40 {
-  bottom: 10rem;
-}
-.top-0 {
-  top: 0px;
-}
-.right-0 {
-  right: 0px;
-}
-.top-\[10\%\] {
-  top: 10%;
-}
-.left-0 {
-  left: 0px;
-}
-.top-10 {
-  top: 2.5rem;
-}
-.top-14 {
-  top: 3.5rem;
-}
-.left-4 {
-  left: 1rem;
-}
-.left-10 {
-  left: 2.5rem;
-}
-.bottom-10 {
-  bottom: 2.5rem;
-}
-.bottom-0 {
-  bottom: 0px;
-}
-.top-20 {
-  top: 5rem;
-}
-.bottom-\[100\%\] {
-  bottom: 100%;
-}
-.bottom-\[80\%\] {
-  bottom: 80%;
-}
-.bottom-\[100px\] {
-  bottom: 100px;
-}
-.bottom-\[0px\] {
-  bottom: 0px;
-}
-.-bottom-\[100px\] {
-  bottom: -100px;
-}
-.-bottom-\[100\%\] {
-  bottom: -100%;
+.bottom-20 {
+  bottom: 5rem;
 }
 .m-auto {
   margin: auto;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
 }
 .inline-block {
   display: inline-block;
@@ -570,41 +543,8 @@ video {
 .h-\[100vh\] {
   height: 100vh;
 }
-.h-40 {
-  height: 10rem;
-}
-.h-\[1px\] {
-  height: 1px;
-}
-.h-\[\.5px\] {
-  height: .5px;
-}
-.h-\[\.2px\] {
-  height: .2px;
-}
-.h-\[0\.2px\] {
-  height: 0.2px;
-}
-.h-\[10\%\] {
-  height: 10%;
-}
-.h-\[20\%\] {
-  height: 20%;
-}
-.h-3 {
-  height: 0.75rem;
-}
-.h-2 {
-  height: 0.5rem;
-}
 .h-\[100px\] {
   height: 100px;
-}
-.h-full {
-  height: 100%;
-}
-.h-\[200px\] {
-  height: 200px;
 }
 .h-\[150px\] {
   height: 150px;
@@ -612,59 +552,29 @@ video {
 .h-\[\.3px\] {
   height: .3px;
 }
-.w-\[0\.3px\] {
-  width: 0.3px;
-}
-.w-\[100\%\] {
-  width: 100%;
-}
-.w-\[10\%\] {
-  width: 10%;
-}
-.w-\[50\%\] {
-  width: 50%;
-}
-.w-\[40\%\] {
-  width: 40%;
-}
-.w-\[20\%\] {
-  width: 20%;
-}
-.w-\[1px\] {
-  width: 1px;
-}
-.w-\[2px\] {
-  width: 2px;
-}
-.w-\[80\%\] {
-  width: 80%;
-}
-.w-\[70\%\] {
-  width: 70%;
-}
-.w-\[68\%\] {
-  width: 68%;
-}
-.w-\[3px\] {
-  width: 3px;
-}
-.w-\[10px\] {
-  width: 10px;
-}
-.w-full {
-  width: 100%;
-}
-.w-\[100px\] {
-  width: 100px;
+.h-40 {
+  height: 10rem;
 }
 .w-\[75\%\] {
   width: 75%;
 }
-.w-\[200px\] {
-  width: 200px;
+.w-\[1px\] {
+  width: 1px;
 }
 .w-\[150px\] {
   width: 150px;
+}
+.w-\[0\.3px\] {
+  width: 0.3px;
+}
+.w-\[70\%\] {
+  width: 70%;
+}
+.w-\[60\%\] {
+  width: 60%;
+}
+.w-\[50\%\] {
+  width: 50%;
 }
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
@@ -682,17 +592,8 @@ video {
 .justify-center {
   justify-content: center;
 }
-.gap-3 {
-  gap: 0.75rem;
-}
 .gap-2 {
   gap: 0.5rem;
-}
-.self-start {
-  align-self: flex-start;
-}
-.self-end {
-  align-self: flex-end;
 }
 .self-center {
   align-self: center;
@@ -705,69 +606,51 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(198 172 119 / var(--tw-bg-opacity));
 }
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
 .bg-\[\#dac9a7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(218 201 167 / var(--tw-bg-opacity));
 }
-.p-2 {
-  padding: 0.5rem;
+.bg-\[\#f4eee4\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 238 228 / var(--tw-bg-opacity));
 }
-.p-16 {
-  padding: 4rem;
+.bg-\[\#ccb485\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 180 133 / var(--tw-bg-opacity));
 }
-.px-48 {
-  padding-left: 12rem;
-  padding-right: 12rem;
+.bg-\[\#556a64\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(85 106 100 / var(--tw-bg-opacity));
 }
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.bg-\[\#acbdb8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(172 189 184 / var(--tw-bg-opacity));
 }
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.bg-\[\#dbe3e1\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 227 225 / var(--tw-bg-opacity));
 }
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.p-5 {
+  padding: 1.25rem;
 }
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
 }
-.pl-40 {
-  padding-left: 10rem;
-}
-.pt-20 {
-  padding-top: 5rem;
+.pt-16 {
+  padding-top: 4rem;
 }
 .pt-44 {
   padding-top: 11rem;
 }
-.pt-10 {
-  padding-top: 2.5rem;
-}
-.pt-14 {
-  padding-top: 3.5rem;
-}
-.pt-16 {
-  padding-top: 4rem;
+.pt-48 {
+  padding-top: 12rem;
 }
 .text-center {
   text-align: center;
 }
-.text-justify {
-  text-align: justify;
-}
-.text-\[5px\] {
-  font-size: 5px;
-}
-.text-\[48px\] {
-  font-size: 48px;
+.text-\[64px\] {
+  font-size: 64px;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -780,32 +663,44 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-\[60px\] {
-  font-size: 60px;
-}
 .font-thin {
   font-weight: 100;
 }
 .font-\[400\] {
   font-weight: 400;
 }
-.leading-\[85px\] {
-  line-height: 85px;
+.font-\[600\] {
+  font-weight: 600;
 }
-.leading-3 {
-  line-height: .75rem;
-}
-.leading-5 {
-  line-height: 1.25rem;
-}
-.leading-8 {
-  line-height: 2rem;
+.font-\[700\] {
+  font-weight: 700;
 }
 .leading-10 {
   line-height: 2.5rem;
 }
+.leading-\[85px\] {
+  line-height: 85px;
+}
+.leading-4 {
+  line-height: 1rem;
+}
+.leading-8 {
+  line-height: 2rem;
+}
+.leading-6 {
+  line-height: 1.5rem;
+}
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+.tracking-normal {
+  letter-spacing: 0em;
+}
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 .text-\[\#c6ac77\] {
   --tw-text-opacity: 1;
@@ -814,6 +709,22 @@ video {
 .text-\[\#eee6d7\] {
   --tw-text-opacity: 1;
   color: rgb(238 230 215 / var(--tw-text-opacity));
+}
+.text-\[\#4f4530\] {
+  --tw-text-opacity: 1;
+  color: rgb(79 69 48 / var(--tw-text-opacity));
+}
+.text-\[\#fff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[\#d5c29b\] {
+  --tw-text-opacity: 1;
+  color: rgb(213 194 155 / var(--tw-text-opacity));
+}
+.text-\[\#cbb383\] {
+  --tw-text-opacity: 1;
+  color: rgb(203 179 131 / var(--tw-text-opacity));
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -827,8 +738,9 @@ body {
   font-family: "Montserrat", sans-serif;
   /* font-family: "Roboto", sans-serif; */
 
-  /* background-color: #234d3a; */
-  /* background-color: #172c2d; */
+  background-color: #234d3a;
+  background-color: #172c2d;
+  background-color: #224244;
   /* color: #dac9a7; */
   color: #c6ac77;
 }
