--- a/Portfolio/src/styles/tailwind.css
+++ b/Portfolio/src/styles/tailwind.css
@@ -13,6 +13,7 @@ body {
 
 h2 {
   font-size: 48px;
+  padding: 20px;
 }
 
 h3 {
@@ -21,4 +22,10 @@ h3 {
 
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
+}
+
+.nav-header {
+  position: fixed;
+  width: inherit;
+  height: inherit;
 }
