--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -480,53 +480,35 @@ video {
 .relative {
   position: relative;
 }
-.top-10 {
-  top: 2.5rem;
-}
-.left-5 {
-  left: 1.25rem;
-}
-.bottom-0 {
-  bottom: 0px;
-}
-.right-0 {
-  right: 0px;
-}
-.top-2 {
-  top: 0.5rem;
-}
-.-left-8 {
-  left: -2rem;
-}
-.-bottom-\[160px\] {
-  bottom: -160px;
-}
-.-left-\[185px\] {
-  left: -185px;
-}
-.top-\[25\%\] {
-  top: 25%;
-}
-.right-5 {
-  right: 1.25rem;
-}
-.bottom-16 {
-  bottom: 4rem;
-}
-.left-1\/2 {
-  left: 50%;
-}
 .top-0 {
   top: 0px;
 }
 .left-0 {
   left: 0px;
 }
+.left-5 {
+  left: 1.25rem;
+}
+.top-\[20\%\] {
+  top: 20%;
+}
+.right-5 {
+  right: 1.25rem;
+}
+.bottom-10 {
+  bottom: 2.5rem;
+}
+.left-1\/2 {
+  left: 50%;
+}
 .top-\[10\%\] {
   top: 10%;
 }
 .left-\[50\%\] {
   left: 50%;
+}
+.top-2 {
+  top: 0.5rem;
 }
 .left-2 {
   left: 0.5rem;
@@ -537,23 +519,14 @@ video {
 .m-auto {
   margin: auto;
 }
-.mb-40 {
-  margin-bottom: 10rem;
-}
-.mb-8 {
-  margin-bottom: 2rem;
+.ml-auto {
+  margin-left: auto;
 }
 .mb-14 {
   margin-bottom: 3.5rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.ml-auto {
-  margin-left: auto;
-}
-.mt-16 {
-  margin-top: 4rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 .mt-20 {
   margin-top: 5rem;
@@ -573,17 +546,11 @@ video {
 .hidden {
   display: none;
 }
-.h-\[100px\] {
-  height: 100px;
+.h-\[100\%\] {
+  height: 100%;
 }
-.h-\[150px\] {
-  height: 150px;
-}
-.h-\[\.3px\] {
-  height: .3px;
-}
-.h-\[100vh\] {
-  height: 100vh;
+.h-\[90vh\] {
+  height: 90vh;
 }
 .h-40 {
   height: 10rem;
@@ -591,23 +558,20 @@ video {
 .h-10 {
   height: 2.5rem;
 }
+.h-16 {
+  height: 4rem;
+}
 .h-4 {
   height: 1rem;
 }
 .h-\[350px\] {
   height: 350px;
 }
-.h-\[100\%\] {
-  height: 100%;
-}
 .h-full {
   height: 100%;
 }
-.w-\[75\%\] {
-  width: 75%;
-}
-.w-\[1px\] {
-  width: 1px;
+.w-\[70\%\] {
+  width: 70%;
 }
 .w-\[150px\] {
   width: 150px;
@@ -618,23 +582,20 @@ video {
 .w-\[0\.3px\] {
   width: 0.3px;
 }
-.w-\[80\%\] {
-  width: 80%;
+.w-\[60\%\] {
+  width: 60%;
 }
 .w-10 {
   width: 2.5rem;
+}
+.w-\[80\%\] {
+  width: 80%;
 }
 .w-12 {
   width: 3rem;
 }
 .w-4 {
   width: 1rem;
-}
-.w-\[70\%\] {
-  width: 70%;
-}
-.w-\[60\%\] {
-  width: 60%;
 }
 .w-\[100\%\] {
   width: 100%;
@@ -660,16 +621,16 @@ video {
 .basis-\[40\%\] {
   flex-basis: 40%;
 }
-.translate-x-\[-50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
 .translate-y-\[-100\%\] {
   --tw-translate-y: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .-translate-x-3 {
   --tw-translate-x: -0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .rotate-6 {
@@ -712,14 +673,14 @@ video {
 .items-center {
   align-items: center;
 }
-.justify-start {
-  justify-content: flex-start;
-}
 .justify-center {
   justify-content: center;
 }
 .justify-between {
   justify-content: space-between;
+}
+.gap-5 {
+  gap: 1.25rem;
 }
 .gap-2 {
   gap: 0.5rem;
@@ -727,15 +688,8 @@ video {
 .gap-3 {
   gap: 0.75rem;
 }
-.gap-5 {
-  gap: 1.25rem;
-}
 .gap-1 {
   gap: 0.25rem;
-}
-.gap-x-6 {
-  -moz-column-gap: 1.5rem;
-       column-gap: 1.5rem;
 }
 .gap-y-5 {
   row-gap: 1.25rem;
@@ -749,6 +703,9 @@ video {
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.overflow-scroll {
+  overflow: scroll;
 }
 .overflow-y-scroll {
   overflow-y: scroll;
@@ -765,15 +722,24 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.border-t {
+  border-top-width: 1px;
+}
+.border-r {
+  border-right-width: 1px;
+}
+.border-l {
+  border-left-width: 1px;
+}
 .border-b {
   border-bottom-width: 1px;
 }
+.border-\[\#c6ac77\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(198 172 119 / var(--tw-border-opacity));
+}
 .border-\[\#164438\]\/60 {
   border-color: rgb(22 68 56 / 0.6);
-}
-.bg-\[\#c6ac77\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(198 172 119 / var(--tw-bg-opacity));
 }
 .bg-\[\#BDC581\] {
   --tw-bg-opacity: 1;
@@ -782,6 +748,14 @@ video {
 .bg-\[\#D5DAB0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(213 218 176 / var(--tw-bg-opacity));
+}
+.bg-\[\#909947\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(144 153 71 / var(--tw-bg-opacity));
+}
+.bg-\[\#c6ac77\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(198 172 119 / var(--tw-bg-opacity));
 }
 .bg-\[\#c6ac77\]\/10 {
   background-color: rgb(198 172 119 / 0.1);
@@ -802,31 +776,15 @@ video {
 .bg-\[\#D2C5B0\]\/80 {
   background-color: rgb(210 197 176 / 0.8);
 }
-.bg-\[\#\#B1BA6A\] {
-  background-color: ##B1BA6A;
-}
-.bg-\[\#383C1C\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(56 60 28 / var(--tw-bg-opacity));
-}
-.bg-\[\#646B31\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 107 49 / var(--tw-bg-opacity));
-}
-.bg-\[\#9BA54C\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(155 165 76 / var(--tw-bg-opacity));
-}
-.bg-\[\#\#909947\] {
-  background-color: ##909947;
-}
-.bg-\[\#909947\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(144 153 71 / var(--tw-bg-opacity));
-}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-8 {
+  padding: 2rem;
 }
 .p-2 {
   padding: 0.5rem;
@@ -834,20 +792,13 @@ video {
 .p-3 {
   padding: 0.75rem;
 }
-.p-4 {
-  padding: 1rem;
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 .py-2 {
   padding-top: 0.5rem;
@@ -857,26 +808,6 @@ video {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -885,31 +816,35 @@ video {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-36 {
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.pt-24 {
-  padding-top: 6rem;
-}
-.pb-20 {
-  padding-bottom: 5rem;
-}
-.pt-16 {
-  padding-top: 4rem;
-}
-.pt-48 {
-  padding-top: 12rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pb-24 {
   padding-bottom: 6rem;
+}
+.pb-32 {
+  padding-bottom: 8rem;
 }
 .pb-14 {
   padding-bottom: 3.5rem;
@@ -943,10 +878,6 @@ video {
 .text-\[35px\] {
   font-size: 35px;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
 .font-thin {
   font-weight: 100;
 }
@@ -975,6 +906,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(22 68 56 / var(--tw-text-opacity));
 }
+.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
 .text-\[\#dac9a7\] {
   --tw-text-opacity: 1;
   color: rgb(218 201 167 / var(--tw-text-opacity));
@@ -993,10 +928,6 @@ video {
 .text-\[\#e6ca9c\] {
   --tw-text-opacity: 1;
   color: rgb(230 202 156 / var(--tw-text-opacity));
-}
-.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
 }
 .opacity-80 {
   opacity: 0.8;
@@ -1055,15 +986,19 @@ body {
 
   background-color: #164438;
   color: #c6ac77;
+  /* width: 100vw;
+  height: 100vh; */
+  overflow: auto;
 }
 
 h2 {
   font-size: 48px;
-  padding: 20px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 15spx;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
@@ -1074,6 +1009,20 @@ h3 {
   position: fixed;
   width: inherit;
   height: inherit;
+}
+.height {
+  height: inherit;
+}
+
+.position {
+  transform: translateX(-50%) !important;
+}
+
+@media screen and (min-width: 1280px) {
+}
+
+section {
+  /* padding-bottom: 20px !important; */
 }
 
 .hover\:cursor-pointer:hover {
@@ -1109,4 +1058,81 @@ h3 {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+@media not all and (min-width: 1280px) {
+
+  .max-xl\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .max-xl\:text-\[70px\] {
+    font-size: 70px;
+  }
+}
+
+@media not all and (min-width: 1024px) {
+
+  .max-lg\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .max-lg\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .max-lg\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .max-lg\:text-\[50px\] {
+    font-size: 50px;
+  }
+
+  .max-lg\:leading-\[58px\] {
+    line-height: 58px;
+  }
+}
+
+@media not all and (min-width: 768px) {
+
+  .max-md\:hidden {
+    display: none;
+  }
+
+  .max-md\:h-32 {
+    height: 8rem;
+  }
+
+  .max-md\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .max-md\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-md\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .max-md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media not all and (min-width: 640px) {
+
+  .max-sm\:basis-\[100\%\] {
+    flex-basis: 100%;
+  }
+
+  .max-sm\:gap-y-2 {
+    row-gap: 0.5rem;
+  }
+
+  .max-sm\:text-\[35px\] {
+    font-size: 35px;
+  }
 }
