--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -468,6 +468,9 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .visible {
   visibility: visible;
 }
@@ -513,6 +516,9 @@ video {
 .left-2 {
   left: 0.5rem;
 }
+.z-\[1000\] {
+  z-index: 1000;
+}
 .z-50 {
   z-index: 50;
 }
@@ -524,6 +530,12 @@ video {
 }
 .mb-14 {
   margin-bottom: 3.5rem;
+}
+.-mt-14 {
+  margin-top: -3.5rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
 }
 .mt-5 {
   margin-top: 1.25rem;
@@ -545,6 +557,9 @@ video {
 }
 .hidden {
   display: none;
+}
+.h-\[50px\] {
+  height: 50px;
 }
 .h-\[100\%\] {
   height: 100%;
@@ -569,6 +584,9 @@ video {
 }
 .h-full {
   height: 100%;
+}
+.w-\[50px\] {
+  width: 50px;
 }
 .w-\[70\%\] {
   width: 70%;
@@ -682,6 +700,9 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
+.gap-4 {
+  gap: 1rem;
+}
 .gap-2 {
   gap: 0.5rem;
 }
@@ -710,11 +731,11 @@ video {
 .overflow-y-scroll {
   overflow-y: scroll;
 }
-.rounded-sm {
-  border-radius: 0.125rem;
-}
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 .rounded-lg {
   border-radius: 0.5rem;
@@ -740,6 +761,9 @@ video {
 }
 .border-\[\#164438\]\/60 {
   border-color: rgb(22 68 56 / 0.6);
+}
+.bg-\[\#ccae62\]\/90 {
+  background-color: rgb(204 174 98 / 0.9);
 }
 .bg-\[\#BDC581\] {
   --tw-bg-opacity: 1;
@@ -800,14 +824,6 @@ video {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -851,6 +867,10 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -932,6 +952,11 @@ video {
 .opacity-80 {
   opacity: 0.8;
 }
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -946,6 +971,11 @@ video {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
@@ -979,6 +1009,10 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
+* {
+  cursor: none;
+}
+
 body {
   /* font-family: "Montserrat", sans-serif; */
 
@@ -986,8 +1020,8 @@ body {
 
   background-color: #164438;
   color: #c6ac77;
-  /* width: 100vw;
-  height: 100vh; */
+  width: 100vw;
+  height: 100vh;
   overflow: auto;
 }
 
