--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -1020,8 +1020,8 @@ body {
 
   background-color: #164438;
   color: #c6ac77;
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw;
+  height: 100vh; */
   overflow: auto;
 }
 
