--- a/Portfolio/src/styles/app.css
+++ b/Portfolio/src/styles/app.css
@@ -489,6 +489,12 @@ video {
 .left-0 {
   left: 0px;
 }
+.top-\[50\%\] {
+  top: 50%;
+}
+.left-\[50\%\] {
+  left: 50%;
+}
 .left-5 {
   left: 1.25rem;
 }
@@ -507,14 +513,14 @@ video {
 .top-\[10\%\] {
   top: 10%;
 }
-.left-\[50\%\] {
-  left: 50%;
-}
 .top-2 {
   top: 0.5rem;
 }
 .left-2 {
   left: 0.5rem;
+}
+.top-\[0\%\] {
+  top: 0%;
 }
 .z-\[1000\] {
   z-index: 1000;
@@ -564,9 +570,6 @@ video {
 .h-\[100\%\] {
   height: 100%;
 }
-.h-\[90vh\] {
-  height: 90vh;
-}
 .h-40 {
   height: 10rem;
 }
@@ -584,6 +587,9 @@ video {
 }
 .h-full {
   height: 100%;
+}
+.h-\[90vh\] {
+  height: 90vh;
 }
 .w-\[50px\] {
   width: 50px;
@@ -836,9 +842,9 @@ video {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.py-36 {
-  padding-top: 9rem;
-  padding-bottom: 9rem;
+.py-52 {
+  padding-top: 13rem;
+  padding-bottom: 13rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -855,6 +861,10 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+.py-36 {
+  padding-top: 9rem;
+  padding-bottom: 9rem;
 }
 .pb-24 {
   padding-bottom: 6rem;
@@ -1052,6 +1062,10 @@ h3 {
   transform: translateX(-50%) !important;
 }
 
+.positionY {
+  transform: translateY(-50%) !important;
+}
+
 @media screen and (min-width: 1280px) {
 }
 
@@ -1142,6 +1156,10 @@ section {
     height: 100%;
   }
 
+  .max-md\:h-\[80vh\] {
+    height: 80vh;
+  }
+
   .max-md\:flex-col {
     flex-direction: column;
   }
@@ -1157,6 +1175,10 @@ section {
 }
 
 @media not all and (min-width: 640px) {
+
+  .max-sm\:h-\[60vh\] {
+    height: 60vh;
+  }
 
   .max-sm\:basis-\[100\%\] {
     flex-basis: 100%;
