--- a/Portfolio/src/styles/tailwind.css
+++ b/Portfolio/src/styles/tailwind.css
@@ -7,14 +7,12 @@
 }
 
 body {
-  /* font-family: "Montserrat", sans-serif; */
+  font-family: "Montserrat", sans-serif;
 
-  font-family: "Playfair Display", serif;
+  /* font-family: "Playfair Display", serif; */
 
   background-color: #164438;
   color: #c6ac77;
-  /* width: 100vw;
-  height: 100vh; */
   overflow: auto;
 }
 
